# workitem-conductor

./: .gitignore  README.md  pyproject.toml
.qwen/skills/auto-skill-pr-review-merge/: SKILL.md
docs/: backlog.md  local-agent-brief.md
examples/: README.md
examples/real-workitem/2026-05-27_tpaclaims-application-policy-search-contract/: execution_brief.md  meta.json  plan.md  request.md  state.json
examples/real-workitem/2026-05-27_tpaclaims-application-policy-search-contract/artifacts/: deploy_report.md  fe_implementation_notes.md  frontend_review.md  implementation_notes.md  merge_deploy_checkpoint.md  policy_order_by_followup.md  review.md  (+3 more)
examples/real-workitem/2026-06-01_tpaclaims-selfcare-policy-discoveries/: artifact_followup_handoff.md  handoff.md  review_handoff.md  state.json  task.md
src/conductor/: __init__.py  cli.py  paths.py  scaffold.py  workspaces.py
src/conductor/config/: __init__.py  loader.py  models.py
src/conductor/core/: __init__.py  context.py  engine.py  refine.py  review.py  stop_conditions.py  workspace_engine.py  worktree.py
src/conductor/dashboard/: __init__.py  scan.py  server.py
src/conductor/flows/: __init__.py  loader.py  models.py
src/conductor/providers/: __init__.py  api.py  base.py  cli_one_shot.py  dryrun.py  ollama.py  registry.py
src/conductor/workitems/: __init__.py  manager.py  models.py
tests/: test_accept.py  test_context.py  test_dashboard.py  test_engine.py  test_init.py  test_providers.py  test_refine.py  test_review.py  test_workitems.py  test_workspace_paths.py  test_workspaces.py  test_worktree.py
(+3 files in other folders)
